新增文件管理模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ ifast.jwt.refreshTokenExpire=86400000
 logging.level.com.ifast=info
 
 session.store-type=HASH_MAP
+
+uploadPath=D:\\bjsgxm\\uploadfile\\
