新增文件管理模块

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 	</properties>
 
 	<build>
-		<finalName></finalName>
+		<finalName>bjsgxm</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -222,12 +222,6 @@
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring4</artifactId>
 			<version>${thymeleaf.spring4.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.qiniu</groupId>
-			<artifactId>qiniu-java-sdk</artifactId>
-			<version>${qiniu.version}</version>
 		</dependency>
 
 		<dependency>
